Fixed alignment nav, experience h3 is back

--- a/style.css
+++ b/style.css
@@ -266,6 +266,10 @@ header a:hover {
     color: #055EA7;
 }
 
+.nav-list {
+    margin-top: 30px;
+}
+
 .nav-list li {
     display: inline;
     padding: 20px;
@@ -482,6 +486,10 @@ article p {
         width: 190px;
         min-width: 150px;
     }
+
+.nav-list {
+    margin-top: 21px;
+}
 
     .nav-list li {
         display: inline;
